# latecript

./: .gitignore  Makefile  README.md  certificate.pem  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/ali/: __init__.py  speechamatics_app.py
src/ali/services/: speechmatics_handler.py
src/latecript/: __init__.py  latecript_app.py
src/latecript/services/: pyaudio_handler.py
